# teachers-lounge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  env.example
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: build-push.yml  ci.yml  codeql.yml  docker-publish.yml  e2e.yml  labeler.yml  terraform.yml  user-service.yml
docs/: embedding-model-decision.md  local-dev.md  qdrant-design.md  qdrant-schema.md  tdd-spec.md  testing-guide.html  testing-master.html  testing-report.html  testing-report.md  tv-tutor-design.md
docs/audits/: full-ci-bypass-audit.md  tl-96k-ci-ops-audit.md  tl-s7z-ci-bypass-audit.md
docs/perf/: README.md  (+2 more)
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.yml  jest.config.ts  middleware.test.ts  middleware.ts  next.config.test.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  three-fiber.d.ts  tsconfig.tsbuildinfo
infra/: README.md  bootstrap.sh
scripts/: gen-testing-doc.mjs  setup-github-secrets.sh
services/ingestion/: .coverage  Dockerfile  pyproject.toml  requirements.txt  ruff.toml
services/ingestion/app/: auth.py  config.py  logging_config.py  main.py  metrics.py  metrics_middleware.py  models.py
services/ingestion/app/processors/: __init__.py  common.py  figure_extractor.py  image_processor.py  office_processor.py  pdf_processor.py  video_processor.py
services/ingestion/app/routers/: ingest.py
services/ingestion/app/services/: chunking.py  clip_embedder.py  db.py  embeddings.py  gcs.py  pubsub.py  qdrant.py  qdrant_writer.py
services/ingestion/app/tasks/: __init__.py  ingest_pdf.py
services/ingestion/tests/: conftest.py  test_db.py  test_figure_extraction.py  test_gcs.py  test_image_processor.py  test_ingest_pdf_task.py  test_logging_config.py  test_office_processor.py  test_pdf_processor.py  test_qdrant_upsert.py  test_routing.py  test_upload.py  test_video_processor.py
services/tl-logging/: pyproject.toml
services/tl-logging/tl_logging/: __init__.py  logging_config.py
(+891 files in other folders)
