[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test imports are often used via pytest fixtures or conftest; F401/F841 common in tests.
"tests/**" = ["F401", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project]
requires-python = ">=3.11,<3.14"
# Note: Python 3.14 is not yet supported (asyncpg/pydantic-core wheels pending)
# Local dev: use Python 3.11–3.13. Docker image uses python:3.13-slim.
