# Ruff lint rules are configured in ruff.toml (takes precedence over this file).
# The [tool.ruff] section below is intentionally empty so pyproject.toml
# remains the source of truth for non-lint tooling only.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project]
requires-python = ">=3.11,<3.14"
# Note: Python 3.14 is not yet supported (asyncpg/pydantic-core wheels pending)
# Local dev: use Python 3.11–3.13. Docker image uses python:3.13-slim.
